syntax = "proto3";

import  "common.proto";

package proto;

service TwoFactorService {
    rpc GenerateFactor (FactorReq) returns (FactorReply) {}
    rpc QueryFactor (FactorReq) returns (FactorReply) {}
    rpc RefreshFactor (FactorReq) returns (FactorReply) {}
    rpc VerifyEmailCode (InfoReq) returns (VerifyReply) {}
    rpc VerifyPhoneCode (InfoReq) returns (VerifyReply) {}
    rpc VerifyGoogleCode (InfoReq) returns (VerifyReply) {}
}

//Request

message FactorReq {
    int64 userId = 1;
    int32 type = 2;
}

message InfoReq {
    int64 userId = 1;
    int32 type = 2;
    string code =3;
}

//Response
message VerifyReply {
    bool result =1;
}

message FactorReply {
  int64 id = 1;
  int64 userId = 2;
  string code = 3;
  BoolValue activated = 4;
  string lastVerifyAt = 5;
  string refreshedAt = 6;
}
